--- a/src/NormeVenit.Library/NormeVenit.Library.csproj
+++ b/src/NormeVenit.Library/NormeVenit.Library.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Store\caen.json">
+    <None Update="Store\normevenit.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
