--- a/src/NormeVenit.Library/NormeVenit.Library.csproj
+++ b/src/NormeVenit.Library/NormeVenit.Library.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Store\tipactivitati.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Store\normevenit.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
